// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid should render grid 1`] = `
.c0 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(0,1fr);
  grid-gap: 8px;
}

<div
  className="c0"
>
  
</div>
`;

exports[`Grid should render grid with cell 1`] = `
.c1 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
}

.c0 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(12,1fr);
  grid-gap: 8px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Content
  </div>
</div>
`;
